# warehouse-wizard

stockmanagement/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt
stockmanagement/.github/workflows/: deploy-retailpulse.yml
stockmanagement/application/: __init__.py
stockmanagement/application/dto/: __init__.py  base_list_filter_dto.py  business_dto.py  business_list_filter_dto.py  business_member_list_filter_dto.py  credit_dto.py  customer_dto.py  customer_list_filter_dto.py  dashboard_dto.py  expense_list_filter_dto.py  finance_dto.py  inventory_dto.py  invoice_list_filter_dto.py  notification_list_filter_dto.py  product_list_filter_dto.py  report_dto.py  sales_dto.py  subscription_dto.py  user_dto.py
stockmanagement/application/use_cases/: __init__.py  alert_use_cases.py  business_use_cases.py  credit_use_cases.py  customer_use_cases.py  dashboard_use_cases.py  doc_credential_use_cases.py  finance_use_cases.py  google_oauth_use_case.py  inventory_use_cases.py  notification_use_cases.py  otp_use_cases.py  password_reset_use_cases.py  profile_use_cases.py  report_use_cases.py  salary_use_cases.py  sales_use_cases.py  subscription_use_cases.py  user_use_cases.py
stockmanagement/apps/authentication/: admin.py  apps.py  middleware.py  models.py  permissions.py  serializers.py  service.py  urls.py  views.py
stockmanagement/apps/dashboard/: apps.py  service.py  urls.py  views.py
stockmanagement/apps/notifications/: admin.py  apps.py  consumer.py  models.py  routing.py  serializers.py  service.py  signals.py  urls.py  views.py
stockmanagement/apps/reports/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
stockmanagement/authentication/: admin.py  apps.py  middleware.py  models.py  permissions.py  serializers.py  service.py  urls.py  views.py
stockmanagement/dashboard/: apps.py  serializers.py  service.py  urls.py  views.py
stockmanagement/domain/: __init__.py
stockmanagement/infrastructure/: __init__.py
stockmanagement/management/: __init__.py  apps.py
stockmanagement/mixins/: __init__.py  exception_handler.py  response_handler.py  response_serializer.py
stockmanagement/notifications/: admin.py  apps.py  consumer.py  middleware.py  models.py  routing.py  serializers.py  service.py  signals.py  urls.py  views.py
stockmanagement/presentation/: __init__.py
stockmanagement/reports/: admin.py  apps.py  models.py  serializers.py  service.py  tests.py  urls.py  views.py
stockmanagement/retailpulse/: __init__.py  api_url.py  celery.py  settings.py  urls.py  wsgi.py
stockmanagement/scripts/: generate_doc_credentials.py  refactor_exceptions.py  test_api.py  test_api_simple.sh
stockmanagement/shared/: __init__.py
stockmanagement/stock/: admin.py  apps.py  models.py  serializers.py  service.py  urls.py  views.py
stockmanagement/stockmanagement/: api_url.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
stockmanagement/tasks/: __init__.py  apps.py  auth_tasks.py  inventory_tasks.py  member_tasks.py  notification_tasks.py  otp_tasks.py  password_reset_tasks.py  report_tasks.py  send_mail.py  subscription_tasks.py
stockmanagement/templates/: inventory_report_template.html  invoice_template.html  reset_password_email.html  sales_report_template.html
stockmanagement/tests/: __init__.py  conftest.py
stockmanagement/utils/: barcode.py  barcode_generator.py  rester_handler.py  s3_storage.py
(+324 files in other folders)
